=== HEAD

* Return fractional seconds in timestamps in the odbc adapter (jeremyevans)

* Support :plain and :phrase options to Dataset#full_text_search on PostgreSQL (jeremyevans)

* Use limit strategy to correctly handle filtering by limited associations (jeremyevans)

* Simplify queries used for filtering by associations with conditions (jeremyevans)

* Use an eager limit strategy by default for *_one associations with orders (jeremyevans)

* Support :limit_strategy eager_graph option, for specifying strategy used for limited associations in that eager graph (jeremyevans)

* Add eager_graph_with_options to model datasets, for specifying options specific to the eager_graph call (jeremyevans)

* Handle offsets on *_many associations when eager graphing when there are no associated results (jeremyevans)

* Make Database#register_array_type work without existing scalar conversion proc in the pg_array extension (jeremyevans)

* Handle presence validations on foreign keys in associated objects when creating new associated objects in the nested_attributes plugin (jeremyevans)

* Respect offsets when eager graphing *_one associations (jeremyevans)

* Add association_join to model datasets, for setting up joins based on associations (jeremyevans)

* Add one_through_many association to many_through_many plugin, for only returning a single record (jeremyevans)

* Add :graph_order association option, useful when :order needs to contain qualified identifiers (jeremyevans)

* Add one_through_one association, similar to many_to_many but only returning a single record (jeremyevans)

=== 4.7.0 (2014-02-01)

* Don't swallow underlying exception if there is an exception closing the cursor on PostgreSQL (jeremyevans) (#761)

* Recognize primary key unique constraint violations on MSSQL and SQLAnywhere (jeremyevans)

* Recognize composite unique constraint violations on SQLite (timcraft) (#758)
